sparkjava/src/main/resources/archetype-resources/manifests/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ${artifactId}
  namespace: juliaaano
spec:
  hosts:
  - "*"
  gateways:
  - ${artifactId}
  http:
  - match:
    - uri:
        prefix: /hello
    route:
    - destination:
        port:
          number: 8000
        host: ${artifactId}
